--- a/FocusBuddy/package.json
+++ b/FocusBuddy/package.json
@@ -22,7 +22,7 @@
 		"vite": "^7.1.10"
 	},
 	"dependencies": {
-		"bootstrap-icons": "^1.13.1",
+		"chart.js": "^4.4.0",
 		"chart.js": "^4.4.0",
 		"mongodb": "^7.0.0"
 	}
